# whitenoise-cli

./: .gitignore  Cargo.toml  README.md  demo_three_clients.sh  demo_two_clients.sh
src/: account.rs  app.rs  cli.rs  cli_handler.rs  contacts.rs  groups.rs  keyring_helper.rs  main.rs  relays.rs  storage.rs  ui.rs  whitenoise_config.rs
