[package]
name = "whitenoise-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }

# WhiteNoise protocol - using local modified version
whitenoise = { path = "./whitenoise" }

# CLI & Interactive
clap = { version = "4.0", features = ["derive"] }
dialoguer = "0.11"
console = "0.15"
crossterm = "0.27"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Other utilities
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
rand = "0.8"
hex = "0.4"
url = "2.5"

# For file-based secrets storage
keyring = "3.6"
base64 = "0.22"
